<resources>
    <string name="app_name">sanayeya_net</string>
    <string name="language">Language</string>
    <string name="apply">Apply</string>
    <string name="user">User</string>
    <string name="winch_owner">Winch Owner</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="in">in</string>
    <string name="review">review</string>
    <string name="based">Based On</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_we_can_help_you_today">HOW WE CAN HELP YOU TODAY?</string>
    <string name="winch">Winch</string>
    <string name="_24_7">24/7</string>
    <string name="home_service">Home \nService</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="locate_your_car_location_on_map">Locate your car location on map</string>
    <string name="locate_your_car_destination_on_the_map">Locate your car destination on the map</string>
    <string name="find">Find</string>
    <string name="we_found_a_winch_in_your_area">WE FOUND A WINCH IN YOUR AREA</string>
    <string name="pick_up_amp_drop_off_location"><![CDATA[Pick Up & Drop Off Location]]></string>
    <string name="road_25_east_road45t">Road 25,East road45t</string>
    <string name="expected_time_of_arrival">Expected time of arrival</string>
    <string name="total_cost">Total cost</string>
    <string name="confirm">Confirm</string>
    <string name="rate">RATE</string>
    <string name="your_rate">Your Rate :</string>
    <string name="write_your_feedback">Write Your Feedback</string>
    <string name="submit">Submit</string>
    <string name="descripition">Descripition</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="reviews">Reviews</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="sms">SMS</string>
    <string name="old_password">Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="reytype_new_password">Reytype New Password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="editprofile">EDIT PROFILE</string>
    <string name="choose_the_service_type">Choose the service type</string>
    <string name="home_ser_title">Home Service</string>
    <string name="choose_your_province">Choose your province</string>
    <string name="choose_the_car_model">Choose the car model</string>
    <string name="choose_the_workshop_type">Choose the workshop type</string>
    <string name="industerial_ser">INDUSTRIAL SERVICES</string>
    <string name="request_info">Request info</string>
    <string name="start">Start</string>
    <string name="to">to</string>
    <string name="reject">REJECT</string>
    <string name="logout">Logout</string>
    <string name="myhome">Home</string>
    <string name="help">Help</string>
    <string name="terms">Terms and conditions</string>
    <string name="winch_request">Winch Request</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="send">Send</string>
    <string name="new_pass">New Password</string>
    <string name="verfication_code">Verfication Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="cash">Cash</string>
    <string name="payment">Payment</string>
    <string name="visa">Visa</string>
    <string name="loading_c">Loading...</string>
    <string name="logged_in_successfully">Logged In Successfully...</string>
    <string name="user_val">Username is too short!</string>
    <string name="ver_code_val">Verification Code is too short!</string>
    <string name="email_val">Email is too short!</string>
    <string name="password_val">Password is too short!</string>
    <string name="whatsapp_val">WhatsApp is too short!</string>
    <string name="password_d_match">Password didnt match!</string>
    <string name="phone_val">Phone is too short!</string>
    <string name="address_val">Address is too short!</string>
    <string name="active">Active</string>
    <string name="address">Address</string>
    <string name="no_work_shop_nearby">There is no companies near by you</string>
    <string name="there_is_no_review">There is any review</string>
    <string name="add_your_feedback_and_rate">Add your feedback and rate</string>
    <string name="please_rate">You must rate</string>
    <string name="feedback">Feedback</string>
    <string name="call">Call</string>
    <string name="complete_all_info">Please Complete All Information</string>
    <string name="no_requests_found">No Requests Found</string>
    <string name="whats_app">Whats App</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="navigation_guide_day" translatable="false">mapbox://styles/mapbox/navigation-guidance-day-v4</string>
    <string name="access_token">sk.eyJ1IjoiYW1yZ2FibyIsImEiOiJja2Mycm0wOWcyNjVhMnJwN2V5czJ5MTJ4In0.d9Z5vcgN-ffnWpbOAjHSMw</string>
    <string name="the_activation_code_has_been_sent_to_your_n_whats_app_please_write_it_here">The activation code has been sent to your\n Whats App, Please write it here</string>
    <string name="finish_request">Finish Request</string>
    <string name="sure">Are you sure you want to finish request?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="call_client">Call Client</string>
    <string name="call_winch">Call Winch</string>
    <string name="Accept">Accept</string>
    <string name="cant_detect">We were unable to determine your location. Access to the website services must be allowed</string>
    <string name="winch_arrived_successfully">Winch Arrived Successfully</string>
    <string name="term_s">erms and conditions for the use of (industrial network) Welcome to (industrial), as well as carefully read the terms and conditions before using the website or application, browsing or adding any advertisement we have is an acknowledgment of you to read the terms and conditions and approval of them. The company and application (industrial network) ) It is a platform that provides space for advertisements for its users (for workshops, owners of winch and consumer), and the role of (Industrial Net) is limited to providing a meeting space (workshops, owners of winch and consumer) in an accessible way, and (Industrial Net) does not bear any responsibility and does not provide any guarantee The direction of employees in relation to the works resulting from the owners of the workshops and winches and they are not referred to to claim compensation for any losses. Instructions and rules for posting the advertisement. Ads are inserted after registration with the mobile phone number and e-mail. The advertiser must classify the advertisement and publish it under the correct section. The title of the workshop and the information of the winch must be written and the photos added correctly. Each workshop should be in its jurisdiction. The owner of the workshop and the owner of the winch must be the owner of it. It contains words or images that violate public morals or illegal, as well as prohibiting any advertisement aimed at defaming persons or institutions. It is prohibited to publish ads for selling weapons of all kinds, whether licensed or unlicensed. • It is prohibited to publish ads for lawyers that aim to announce the lawyer for himself or work to bring in clients. It is prohibited to publish advertisements that violate the laws in the country of the originator of the advertisement, as well as prohibits the publication of advertisements that violate the laws in the State of Kuwait, especially Law No. 63 of 2015 on combating electronic crime, and Law No. 38 of 2002 regarding the regulation of the declaration of articles related to health, and it is prohibited to publish advertisements for drugs and sexual stimulants. It is prohibited to publish smoking ads of all kinds, regular or electronic. It is prohibited to publish advertisements of domestic workers of all kinds, as well as the publication of advertisements of phantom employment or rental of homes in the hours. Also it is prohibited to publish all types of human trafficking. It is prohibited to publish any advertisement for gambling and betting or magic and sorcery ads. For wines or spirits of all kinds - It also prohibits the publication of any advertisement for narcotics and hashish of all kinds. It is prohibited to announce the counter for loans and installation, as well as the announcement of apartments furnished with hours or daily rent other than the companies authorized to do so, and all advertisements for investment and calls for investment and commercial participation are prohibited. The Industrial Net Department reserves the right to prohibit any phone number that uses the application for abuse or damage to others or if the application is used for unlawful purposes. The user respects the browsers and other users • It is prohibited to reserve ads or reserve installation for the purpose of selling them to another party. The user, the publisher of the advertisement, bears any legal accountability or any compensation without minimum liability on (Industrial Net ) • Administration (Industrial Net) the right to prevent any user who does not comply with the conditions of application.</string>
    <string name="warsha">Warsha</string>
    <string name="arabic_name">Arabic name</string>
    <string name="english_name">English Name</string>
    <string name="arabic_descripition">Arabic Descripition</string>
    <string name="english_descripition">English Descripition</string>
    <string name="please_upload_img">Please Upload Image</string>
</resources>
