<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_170sdp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:src="@color/line_color" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/request_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".435"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Road 45,30:00 Am"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_32sdp"
            android:gravity="center"
            android:layout_weight=".13">
        <ImageView
            android:id="@+id/go_map"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/arrow_next"
            android:padding="@dimen/_10sdp"
            android:visibility="gone"
            android:src="@drawable/arrow"
            android:tint="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".44"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Road 45,30:00 Am"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/apply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".47"
            android:background="@drawable/button_3_bg"
            android:text="@string/apply"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".06" />

        <Button
            android:id="@+id/reject"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".47"
            android:background="@drawable/button_4_bg"
            android:text="@string/reject"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

</LinearLayout>