<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Scenario_client.Scenario_main_screen.Controller.Secnario_Categories.winch.Scenario_winch_price.controller.winch_price">
 <ImageView
     android:layout_width="match_parent"
     android:layout_height="@dimen/_300sdp"
     android:src="@drawable/winch_price_bg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".35"
            android:gravity="center"
            android:orientation="vertical">

           <ImageView
               android:layout_width="@dimen/_50sdp"
               android:layout_height="@dimen/_50sdp"
               android:src="@drawable/done"
               android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_found_a_winch_in_your_area"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@android:color/white"/>

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_height="0dp"
            android:layout_weight=".5"
            app:cardElevation="@dimen/_5sdp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:hint="@string/pick_up_amp_drop_off_location"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textColor="@android:color/black"
                    android:text="@string/road_25_east_road45t"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/expected_time_of_arrival"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textColor="@android:color/black"
                    android:text="3:00 PM"/>

                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textColor="@android:color/black"
                    android:hint="in 24 min"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/total_cost"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:textColor="@android:color/black"
                    android:text="250$"/>

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/button_1_bg"
                    android:text="@string/confirm"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>