<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".view.Scenario_client.Scenario_main_screen.Controller.Secnario_Categories.winch.Scenario_winch_location.controller.winch_location">
     <include layout="@layout/categories_bar"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_weight=".85">
         <ImageView
             android:layout_width="@dimen/_200sdp"
             android:layout_height="@dimen/_400sdp"
             android:layout_marginBottom="-250dp"
             android:layout_alignParentBottom="true"
             android:src="@drawable/auth_curve"/>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center|bottom"
              android:paddingBottom="@dimen/_50sdp"
              android:paddingLeft="@dimen/_20sdp"
              android:paddingRight="@dimen/_20sdp"
              android:orientation="vertical">
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/select_your_location"
                  android:textColor="@android:color/black"
                  android:textSize="@dimen/_20sdp"
                  android:gravity="center"/>
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/_55sdp"
                  android:layout_marginTop="@dimen/_20sdp"
                  android:hint="@string/locate_your_car_location_on_map"
                  android:background="@drawable/location_text_bg"
                  android:gravity="center|left"
                  android:textSize="@dimen/_13sdp"
                  android:id="@+id/car_location"
                  android:paddingLeft="@dimen/_12sdp"/>
              <ImageView
                  android:layout_width="@dimen/_20sdp"
                  android:layout_height="@dimen/_20sdp"
                  android:layout_gravity="left"
                  android:layout_marginTop="@dimen/_5sdp"
                  android:layout_marginBottom="@dimen/_5sdp"
                  android:src="@drawable/menu"
                  android:tint="@color/s_color"
                  android:layout_marginLeft="@dimen/_10sdp"/>
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/_55sdp"
                  android:hint="@string/locate_your_car_destination_on_the_map"
                  android:background="@drawable/location_text_bg"
                  android:gravity="center|left"
                  android:id="@+id/car_destination"
                  android:textSize="@dimen/_13sdp"
                  android:paddingLeft="@dimen/_12sdp"/>

              <Button
                  android:id="@+id/find"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/_40sdp"
                  android:layout_marginTop="@dimen/_20sdp"
                  android:background="@drawable/button_1_bg"
                  android:text="@string/find"
                  android:textColor="@android:color/white"
                  android:textSize="@dimen/_13sdp"
                  android:textStyle="bold" />
          </LinearLayout>
     </RelativeLayout>
</LinearLayout>